@@ -1,24 +1,31 @@
 package com.forgeessentials.core.moduleLauncher;
 
+import static net.minecraftforge.registries.ForgeRegistry.REGISTRIES;
+
+import java.util.ArrayList;
 import java.util.Collection;
+import java.util.List;
 import java.util.Map;
-import java.util.Set;
 import java.util.TreeMap;
+import java.util.stream.Collectors;
 
 import javax.annotation.Nullable;
+
+import org.objectweb.asm.Type;
 
 import com.forgeessentials.api.APIRegistry;
 import com.forgeessentials.api.APIRegistry.ForgeEssentialsRegistrar;
 import com.forgeessentials.core.ForgeEssentials;
-import com.forgeessentials.core.moduleLauncher.config.ConfigLoader;
+import com.forgeessentials.core.config.ConfigBase;
+import com.forgeessentials.core.config.ConfigLoader;
 import com.forgeessentials.util.events.ConfigReloadEvent;
-import com.forgeessentials.util.events.FEModuleEvent.FEModulePreInitEvent;
-import com.forgeessentials.util.output.LoggingHandler;
+import com.forgeessentials.util.output.logger.LoggingHandler;
+import com.google.common.collect.Maps;
 
-import net.minecraftforge.fml.common.Loader;
-import net.minecraftforge.fml.common.ModContainer;
-import net.minecraftforge.fml.common.discovery.ASMDataTable.ASMData;
-import net.minecraftforge.fml.common.event.FMLPreInitializationEvent;
+import net.minecraftforge.common.MinecraftForge;
+import net.minecraftforge.fml.ModContainer;
+import net.minecraftforge.fml.ModList;
+import net.minecraftforge.forgespi.language.ModFileScanData;
 
 public class ModuleLauncher
 {
@@ -28,44 +35,63 @@ public class ModuleLauncher
     }
 
     public static ModuleLauncher instance;
-    
-    private static TreeMap<String, ModuleContainer> containerMap = new TreeMap<String, ModuleContainer>();
 
-    public void preLoad(FMLPreInitializationEvent e)
+    private static TreeMap<String, ModuleContainer> containerMap = new TreeMap<>();
+
+    private static final Type MOD = Type.getType(FEModule.class);
+
+    public void init()
     {
         LoggingHandler.felog.info("Discovering and loading modules...");
 
-        // started ASM handling for the module loading
-        Set<ASMData> data = e.getAsmData().getAll(FEModule.class.getName());
+        final List<ModFileScanData.AnnotationData> data = ModList.get().getAllScanData().stream()
+                .map(ModFileScanData::getAnnotations).flatMap(Collection::stream)
+                .filter(a -> MOD.equals(a.getAnnotationType())).collect(Collectors.toList());
 
-        // LOAD THE MODULES!
+        Map<Type, String> classModIds = Maps.newHashMap();
+
+        // Gather all @FEModule classes
+        data.stream().filter(a -> MOD.equals(a.getAnnotationType()))
+                .forEach(info -> classModIds.put(info.getClassType(), (String) info.getAnnotationData().get("value")));
+        LoggingHandler.felog.info("Found {} FEModule annotations", data.size());
+        for (ModFileScanData.AnnotationData asm : data)
+        {
+            LoggingHandler.felog.debug("Found FEModule {}", asm.getMemberName());
+        }
+        // started ASM handling for the module loading
+        // Set<ASMData> data = e.getAsmData().getAll(FEModule.class.getName());
+
+        // Create THE MODULES!
         ModuleContainer temp, other;
-        for (ASMData asm : data)
+        for (ModFileScanData.AnnotationData asm : data)
         {
             temp = new ModuleContainer(asm);
             if (temp.isLoadable && !APIRegistry.FE_EVENTBUS.post(new ModuleRegistrationEvent(temp)))
             {
+                LoggingHandler.felog.debug("Checking if contanerMap contains: " + temp.name);
                 if (containerMap.containsKey(temp.name))
                 {
                     other = containerMap.get(temp.name);
                     if (temp.doesOverride && other.mod == ForgeEssentials.instance)
                     {
+                        LoggingHandler.felog.debug("Duplicate module overrided the existing one");
                         containerMap.put(temp.name, temp);
                     }
                     else if (temp.mod == ForgeEssentials.instance && other.doesOverride)
                     {
+                        LoggingHandler.felog.debug("Duplicate module was overrided by the existing one");
                         continue;
                     }
                     else
                     {
-                        throw new RuntimeException("{FE-Module-Launcher} " + temp.name + " is conflicting with " + other.name);
+                        throw new RuntimeException(
+                                "{FE-Module-Launcher} " + temp.name + " is conflicting with " + other.name);
                     }
                 }
                 else
                 {
                     containerMap.put(temp.name, temp);
                 }
-
                 temp.createAndPopulate();
                 LoggingHandler.felog.debug("Discovered FE module " + temp.name);
             }
@@ -73,19 +99,24 @@ public class ModuleLauncher
 
         CallableMap map = new CallableMap();
 
-        data = e.getAsmData().getAll(ForgeEssentialsRegistrar.class.getName());
+        LoggingHandler.felog.debug("Gathering @FEModule classes");
+        // Gather all @FEModule classes
+        data.stream().filter(a -> Type.getType(ForgeEssentialsRegistrar.class).equals(a.getAnnotationType()))
+                .forEach(info -> classModIds.put(info.getClassType(), (String) info.getAnnotationData().get("value")));
+        LoggingHandler.felog.info(REGISTRIES, "Found {} ForgeEssentialsRegistrar annotations", data.size());
+
         Class<?> c;
         Object obj = null;
-        for (ASMData asm : data)
+        for (ModFileScanData.AnnotationData asm : data)
         {
             try
             {
                 obj = null;
-                c = Class.forName(asm.getClassName());
+                c = Class.forName((String) asm.getAnnotationData().getClass().getName());
 
                 try
                 {
-                    obj = c.newInstance();
+                    obj = c.getDeclaredConstructor().newInstance();
                     map.scanObject(obj);
                     // this works?? skip everything else and go on to the next one.
                     continue;
@@ -105,7 +136,17 @@ public class ModuleLauncher
             }
         }
 
-        for (ModContainer container : Loader.instance().getModList())
+        List<ModContainer> modList = new ArrayList<>();
+        for (String id : ModList.get().applyForEachModContainer(ModContainer::getModId).collect(Collectors.toList()))
+        {
+            ModContainer temp2 = ModList.get().getModContainerById(id).orElse(null);
+            if (temp2 != null)
+            {
+                modList.add(temp2);
+            }
+        }
+
+        for (ModContainer container : modList)
             if (container.getMod() != null)
                 map.scanObject(container);
 
@@ -119,7 +160,7 @@ public class ModuleLauncher
             if (module.module instanceof ConfigLoader)
             {
                 LoggingHandler.felog.debug("Registering configuration for FE module " + module.name);
-                ForgeEssentials.getConfigManager().registerLoader(module.name, (ConfigLoader) module.module, false);
+                ForgeEssentials.getConfigManager().registerSpecs((ConfigLoader) module.module);
             }
             else
             {
@@ -127,22 +168,50 @@ public class ModuleLauncher
             }
         }
 
-        APIRegistry.getFEEventBus().post(new FEModulePreInitEvent(e));
+        ConfigBase.getModuleConfig().saveConfig();
 
-        ForgeEssentials.getConfigManager().load(false);
+        ForgeEssentials.getConfigManager().loadAllRegisteredConfigs();
+        ForgeEssentials.getConfigManager().buildAllRegisteredConfigs();
+        // Moved to ServerAboutToStart Event in Main Class
+        // ForgeEssentials.getConfigManager().bakeAllRegisteredConfigs(false);
     }
 
     public void reloadConfigs()
     {
-        ForgeEssentials.getConfigManager().load(true);
+        ForgeEssentials.getConfigManager().bakeAllRegisteredConfigs(true);
         APIRegistry.getFEEventBus().post(new ConfigReloadEvent());
     }
 
     public void unregister(String moduleName)
     {
         ModuleContainer container = containerMap.get(moduleName);
-        APIRegistry.getFEEventBus().unregister(container.module);
+        try
+        {
+            if (container == null)
+            {
+                LoggingHandler.felog.error("Module " + moduleName + " has a null containerMap entry!");
+            }
+            if (container.module == null)
+            {
+                LoggingHandler.felog
+                        .error("Module " + moduleName + " has a null module entry in the containerMap entry!");
+            }
+            MinecraftForge.EVENT_BUS.unregister(container.module);
+            LoggingHandler.felog.error("Un-Registered module:  " + moduleName);
+        }
+        catch (NullPointerException e)
+        {
+            LoggingHandler.felog.error("Failed to un-register module:  " + moduleName);
+            LoggingHandler.felog.error(
+                    "This could be a major issue, if anything unexpected happens please contact the ForgeEssentials team!");
+        }
         containerMap.remove(moduleName);
+    }
+
+    public void handleModuleParents() {
+    	for(ModuleContainer mod :getModuleMap().values()) {
+    		mod.handleParentMod();
+    	}
     }
 
     public static Collection<String> getModuleList()
@@ -156,7 +225,8 @@ public class ModuleLauncher
     }
 
     @Nullable
-    public static ModuleContainer getModuleContainer(String slug) {
+    public static ModuleContainer getModuleContainer(String slug)
+    {
         return containerMap.getOrDefault(slug, null);
     }
 }
