@@ -3,28 +3,25 @@ package com.forgeessentials.remote;
 import java.io.File;
 import java.io.IOException;
 import java.io.InputStream;
+import java.lang.reflect.InvocationTargetException;
 import java.net.InetAddress;
 import java.net.UnknownHostException;
 import java.security.GeneralSecurityException;
 import java.security.MessageDigest;
 import java.security.NoSuchAlgorithmException;
 import java.security.SecureRandom;
+import java.util.Collection;
 import java.util.HashMap;
 import java.util.HashSet;
+import java.util.List;
 import java.util.Map;
 import java.util.Random;
 import java.util.Set;
 import java.util.UUID;
-
-import net.minecraftforge.common.config.Configuration;
-import net.minecraftforge.fml.common.discovery.ASMDataTable;
-import net.minecraftforge.fml.common.discovery.ASMDataTable.ASMData;
-import net.minecraftforge.fml.common.event.FMLPreInitializationEvent;
-import net.minecraftforge.fml.common.eventhandler.EventPriority;
-import net.minecraftforge.fml.common.eventhandler.SubscribeEvent;
-import net.minecraftforge.server.permission.DefaultPermissionLevel;
+import java.util.stream.Collectors;
 
 import org.apache.commons.codec.binary.Hex;
+import org.objectweb.asm.Type;
 
 import com.forgeessentials.api.APIRegistry;
 import com.forgeessentials.api.UserIdent;
@@ -32,29 +29,44 @@ import com.forgeessentials.api.permissions.Zone;
 import com.forgeessentials.api.remote.FERemoteHandler;
 import com.forgeessentials.api.remote.RemoteHandler;
 import com.forgeessentials.api.remote.RemoteManager;
+import com.forgeessentials.commons.events.RegisterPacketEvent;
+import com.forgeessentials.commons.network.NetworkUtils;
+import com.forgeessentials.commons.network.packets.Packet07Remote;
 import com.forgeessentials.core.ForgeEssentials;
-import com.forgeessentials.core.misc.FECommandManager;
+import com.forgeessentials.core.config.ConfigData;
+import com.forgeessentials.core.config.ConfigLoaderBase;
 import com.forgeessentials.core.misc.Translator;
+import com.forgeessentials.core.misc.commandTools.FECommandManager;
 import com.forgeessentials.core.moduleLauncher.FEModule;
-import com.forgeessentials.core.moduleLauncher.config.ConfigLoaderBase;
 import com.forgeessentials.data.v2.DataManager;
 import com.forgeessentials.remote.command.CommandRemote;
-import com.forgeessentials.util.events.FEModuleEvent.FEModuleInitEvent;
-import com.forgeessentials.util.events.FEModuleEvent.FEModulePreInitEvent;
-import com.forgeessentials.util.events.FEModuleEvent.FEModuleServerInitEvent;
-import com.forgeessentials.util.events.FEModuleEvent.FEModuleServerStopEvent;
-import com.forgeessentials.util.output.LoggingHandler;
+import com.forgeessentials.util.events.FEModuleEvent.FEModuleServerAboutToStartEvent;
+import com.forgeessentials.util.events.FEModuleEvent.FEModuleServerStartingEvent;
+import com.forgeessentials.util.events.FEModuleEvent.FEModuleServerStoppingEvent;
+import com.forgeessentials.util.output.logger.LoggingHandler;
+import com.google.common.collect.Maps;
 import com.google.gson.Gson;
 import com.mojang.authlib.GameProfile;
 
-@FEModule(name = "Remote", parentMod = ForgeEssentials.class, canDisable = true)
+import net.minecraftforge.common.ForgeConfigSpec;
+import net.minecraftforge.common.ForgeConfigSpec.Builder;
+import net.minecraftforge.event.RegisterCommandsEvent;
+import net.minecraftforge.eventbus.api.EventPriority;
+import net.minecraftforge.eventbus.api.SubscribeEvent;
+import net.minecraftforge.fml.ModList;
+import net.minecraftforge.forgespi.language.ModFileScanData;
+import net.minecraftforge.server.permission.DefaultPermissionLevel;
+
+@FEModule(name = "Remote", parentMod = ForgeEssentials.class, canDisable = true, defaultModule = false)
 public class ModuleRemote extends ConfigLoaderBase implements RemoteManager
 {
+    private static ForgeConfigSpec REMOTE_CONFIG;
+    private static final ConfigData data = new ConfigData("Remote", REMOTE_CONFIG, new ForgeConfigSpec.Builder());
 
     public static class PasskeyMap extends HashMap<UserIdent, String>
     {
         private static final long serialVersionUID = -8268113844467318789L; /* default */
-    };
+    }
 
     private static final String CONFIG_CAT = "Remote";
 
@@ -73,7 +85,7 @@ public class ModuleRemote extends ConfigLoaderBase implements RemoteManager
     static
     {
         // Build a character set with only easily distinguishable characters
-        Set<Character> chars = new HashSet<Character>();
+        Set<Character> chars = new HashSet<>();
         for (char c = 'a'; c <= 'z'; c++)
             chars.add(c);
         for (char c = 'A'; c <= 'Z'; c++)
@@ -111,52 +123,87 @@ public class ModuleRemote extends ConfigLoaderBase implements RemoteManager
 
     protected boolean mcServerStarted;
 
+    private static final Type MOD = Type.getType(FERemoteHandler.class);
+
     /* ------------------------------------------------------------ */
 
-    @SubscribeEvent
-    public void getASMDataTable(FEModulePreInitEvent event)
+    /**
+     * Register remote module and basic handlers
+     */
+    public ModuleRemote()
     {
-        ASMDataTable asmdata = ((FMLPreInitializationEvent) event.getFMLEvent()).getAsmData();
-        for (ASMData asm : asmdata.getAll(FERemoteHandler.class.getName()))
+        APIRegistry.remoteManager = this;
+    }
+
+    @SubscribeEvent
+    public void registerCommands(RegisterCommandsEvent event)
+    {
+        FECommandManager.registerCommand(new CommandRemote(true), event.getDispatcher());
+    }
+
+    @SubscribeEvent
+    public void registerPacket(RegisterPacketEvent event)
+    {
+        NetworkUtils.registerServerToClient(7, Packet07Remote.class, Packet07Remote::encode, Packet07Remote::decode,
+                Packet07Remote::handler);
+    }
+
+    /**
+     * Register FERemoteHandler types
+     */
+    public void getASMDataTable()
+    {
+
+        final List<ModFileScanData.AnnotationData> data = ModList.get().getAllScanData().stream()
+                .map(ModFileScanData::getAnnotations).flatMap(Collection::stream)
+                .filter(a -> MOD.equals(a.getAnnotationType())).collect(Collectors.toList());
+
+        Map<Type, String> classModIds = Maps.newHashMap();
+
+        // Gather all @FERemoteHandler classes
+        data.stream().filter(a -> MOD.equals(a.getAnnotationType()))
+                .forEach(info -> classModIds.put(info.getClassType(), (String) info.getAnnotationData().get("value")));
+        LoggingHandler.felog.info("Found {} FERemoteHandler annotations", data.size());
+
+        for (ModFileScanData.AnnotationData asm : data)
         {
             try
             {
-                Class<?> clazz = Class.forName(asm.getClassName());
+                Class<?> clazz = Class.forName(asm.getClass().getName());
                 if (RemoteHandler.class.isAssignableFrom(clazz))
                 {
-                    RemoteHandler handler = (RemoteHandler) clazz.newInstance();
+                    RemoteHandler handler = (RemoteHandler) clazz.getDeclaredConstructor().newInstance();
                     FERemoteHandler annot = handler.getClass().getAnnotation(FERemoteHandler.class);
                     registerHandler(handler, annot.id());
                 }
             }
             catch (ClassNotFoundException | InstantiationException | IllegalAccessException e)
             {
-                LoggingHandler.felog.debug("Could not load FERemoteHandler " + asm.getClassName());
+                LoggingHandler.felog.debug("Could not load FERemoteHandler " + asm.getClass());
+            }
+            catch (IllegalArgumentException | SecurityException | NoSuchMethodException | InvocationTargetException e)
+            {
+                // TODO Auto-generated catch block
+                e.printStackTrace();
             }
         }
     }
 
-    /**
-     * Register remote module and basic handlers
-     */
-    @SuppressWarnings("deprecation")
-    @SubscribeEvent
-    public void load(FEModuleInitEvent event)
+    @SubscribeEvent(priority = EventPriority.LOWEST)
+    public void serverAboutToStart(FEModuleServerAboutToStartEvent event)
     {
-        APIRegistry.remoteManager = this;
-        APIRegistry.perms.registerPermission(PERM, DefaultPermissionLevel.OP, "Allows login to remote module");
-        APIRegistry.perms.registerPermission(PERM_CONTROL, DefaultPermissionLevel.OP,
-                "Allows to start / stop remote server and control users (regen passkeys, kick, block)");
-
-        FECommandManager.registerCommand(new CommandRemote());
+        getASMDataTable();
     }
 
     /**
      * Initialize passkeys, server and commands
      */
     @SubscribeEvent(priority = EventPriority.LOWEST)
-    public void serverStarting(FEModuleServerInitEvent event)
+    public void serverStarting(FEModuleServerStartingEvent event)
     {
+        APIRegistry.perms.registerPermission(PERM, DefaultPermissionLevel.OP, "Allows login to remote module");
+        APIRegistry.perms.registerPermission(PERM_CONTROL, DefaultPermissionLevel.OP,
+                "Allows to start / stop remote server and control users (regen passkeys, kick, block)");
         loadPasskeys();
         startServer();
         mcServerStarted = true;
@@ -166,25 +213,50 @@ public class ModuleRemote extends ConfigLoaderBase implements RemoteManager
      * Stop remote server when the MC-server stops
      */
     @SubscribeEvent
-    public void serverStopping(FEModuleServerStopEvent event)
+    public void serverStopping(FEModuleServerStoppingEvent event)
     {
         stopServer();
         mcServerStarted = false;
     }
 
+    static ForgeConfigSpec.BooleanValue FElocalhostOnly;
+    static ForgeConfigSpec.ConfigValue<String> FEhostname;
+    static ForgeConfigSpec.IntValue FEport;
+    static ForgeConfigSpec.BooleanValue FEuseSSL;
+    static ForgeConfigSpec.IntValue FEpasskeyLength;
+
     @Override
-    public void load(Configuration config, boolean isReload)
+    public void load(Builder BUILDER, boolean isReload)
     {
-        localhostOnly = config.get(CONFIG_CAT, "localhostOnly", true, "Allow connections from the web").getBoolean();
-        hostname = config.get(CONFIG_CAT, "hostname", "localhost", "Hostname of your server. Used for QR code generation.").getString();
-        port = config.get(CONFIG_CAT, "port", 27020, "Port to connect remotes to").getInt();
-        useSSL = config
-                .get(CONFIG_CAT, "use_ssl", false,
-                        "Protect the communication against network sniffing by encrypting traffic with SSL (You don't really need it - believe me)")
-                .getBoolean();
-        passkeyLength = config.get(CONFIG_CAT, "passkey_length", 6, "Length of the randomly generated passkeys").getInt();
-        if (mcServerStarted)
-            startServer();
+        BUILDER.push(CONFIG_CAT);
+        FElocalhostOnly = BUILDER.comment("Allow connections from the web").define("localhostOnly", true);
+        FEhostname = BUILDER.comment("Hostname of your server. Used for QR code generation.").define("hostname",
+                "localhost");
+        FEport = BUILDER.comment("Port to connect remotes to").defineInRange("port", 27020, 0, 65535);
+        FEuseSSL = BUILDER.comment(
+                "Protect the communication against network sniffing by encrypting traffic with SSL (You don't really need it - believe me)")
+                .define("use_ssl", false);
+        FEpasskeyLength = BUILDER.comment("Length of the randomly generated passkeys").defineInRange("passkey_length",
+                6, 1, 256);
+        BUILDER.pop();
+    }
+
+    @Override
+    public void bakeConfig(boolean reload)
+    {
+        getInstance().localhostOnly = FElocalhostOnly.get();
+        getInstance().hostname = FEhostname.get();
+        getInstance().port = FEport.get();
+        getInstance().useSSL = FEuseSSL.get();
+        passkeyLength = FEpasskeyLength.get();
+        if (getInstance().mcServerStarted)
+            getInstance().startServer();
+    }
+
+    @Override
+    public ConfigData returnData()
+    {
+        return data;
     }
 
     /* ------------------------------------------------------------ */
@@ -252,19 +324,20 @@ public class ModuleRemote extends ConfigLoaderBase implements RemoteManager
     /*
      * (non-Javadoc)
      * 
-     * @see com.forgeessentials.api.remote.RemoteManager#registerHandler(com.forgeessentials.api.remote.RemoteHandler)
+     * @see com.forgeessentials.api.remote.RemoteManager#registerHandler(com. forgeessentials.api.remote.RemoteHandler)
      */
     @Override
     public void registerHandler(RemoteHandler handler, String id)
     {
         if (handlers.containsKey(id))
-            throw new IllegalArgumentException(
-                    Translator.format("Tried to register handler \"%s\" with ID \"%s\", but handler \"%s\" is already registered with that ID.",
-                            handler.getClass().getName(), id, handlers.get(id).getClass().getName()));
+            throw new IllegalArgumentException(Translator.format(
+                    "Tried to register handler \"%s\" with ID \"%s\", but handler \"%s\" is already registered with that ID.",
+                    handler.getClass().getName(), id, handlers.get(id).getClass().getName()));
 
         handlers.put(id, handler);
         String perm = handler.getPermission();
-        if (perm != null && APIRegistry.perms.getServerZone().getRootZone().getGroupPermission(Zone.GROUP_DEFAULT, perm) == null)
+        if (perm != null
+                && APIRegistry.perms.getServerZone().getRootZone().getGroupPermission(Zone.GROUP_DEFAULT, perm) == null)
             APIRegistry.perms.registerPermission(perm, DefaultPermissionLevel.OP, perm);
     }
 
@@ -304,7 +377,8 @@ public class ModuleRemote extends ConfigLoaderBase implements RemoteManager
     {
         StringBuilder passkey = new StringBuilder();
         Random rnd;
-        try {
+        try
+        {
             rnd = SecureRandom.getInstanceStrong();
         }
         catch (NoSuchAlgorithmException e)
@@ -315,6 +389,7 @@ public class ModuleRemote extends ConfigLoaderBase implements RemoteManager
             passkey.append(PASSKEY_CHARS[rnd.nextInt(PASSKEY_CHARS.length)]);
         return passkey.toString();
     }
+
     /**
      * Get stored passkey for user or generate a new one and save it
      * 
@@ -413,7 +488,8 @@ public class ModuleRemote extends ConfigLoaderBase implements RemoteManager
     {
         if (!userIdent.hasUuid())
             return null;
-        return String.format("%s@%s:%d|%s", userIdent.getUsernameOrUuid(), (useSSL ? "ssl:" : "") + hostname, port, getPasskey(userIdent));
+        return String.format("%s@%s:%d|%s", userIdent.getUsernameOrUuid(), (useSSL ? "ssl:" : "") + hostname, port,
+                getPasskey(userIdent));
     }
 
     /**
@@ -423,5 +499,4 @@ public class ModuleRemote extends ConfigLoaderBase implements RemoteManager
     {
         return instance;
     }
-
 }
